--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -1,86 +1,68 @@
 <div class="left-sidebar-nav offcanvas-xl offcanvas-start" tabindex="-1" id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
-
     <nav aria-label="Documentation section navigation" class="container px-0" id="left-nav-menu">
         <div class="list-group top-level d-flex">
-            {{/*  First entry for the "Docs" section representing home.html  */}}
             <div class="d-flex flex-row my-0 nav-parent-container position-relative list-group-item list-group-item-action {{if .IsHome }}active{{end}}" id="Docs">
                 <div class="left-offset hide"></div> <!-- Used to keep nav titles aligned evenly by flex -->
                 <a href="{{.Site.BaseURL}}" class="stretched-link">Docs</a>
             </div>
+            {{ $currentPage := . }}
+            {{ with .Site.GetPage "section" "Docs" }}
 
-            {{ $currentPage:= . }}
+            {{ end }}
+            
             {{ range .Site.Sections.ByWeight }}
-
-                {{ $expand := (or (eq $currentPage .) (eq $currentPage.FirstSection .)) }}
-
-                {{/*  Generate a random ID for each parent to use as the collapse target ID  */}}
-                {{ $id := substr (sha1 .Permalink) 0 8 }}
-
-                    <!-- Parent Menu Button -->
-                    {{ if or (not .Page.Params.tocHidden) (eq $.Section "contribute") }}
-                    <div class="d-flex flex-row my-0 nav-parent-container position-relative  {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed')">
-                        <div class="button-container left-offset">
-                            <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
-                        </div>
-                        <span class="nav-parent-title">{{.Title }}</span>
+                {{ $expand := or (eq $currentPage .) (eq $currentPage.FirstSection .) }}
+                {{ $id := printf "section-%s" .Section | urlize }}
+                
+                <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed'); window.location.href='{{.Permalink}}';">
+                    <div class="button-container left-offset">
+                        <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
                     </div>
+                    <span class="nav-parent-title">{{.Title }}</span>
+                </div>
+                
+                
+                <div class="nav-child-container" id="{{.Section}}-children">
+                    <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
+                        {{if .Content}}
+                            <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if or (not .Page.Params.tocHidden) (eq .CurrentSection "contribute") }}d-none{{end}}">
+                                <div class="left-offset hide"></div>
+                            <a href="{{.Permalink}}" class="stretched-link child-link">{{ .Title }}</a>
+                        </div>
                     {{ end }}
-                    <!-- Child Pages -->
-                    <div class="nav-child-container" id="{{.Section}}-children">
-                        <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
-                            {{if .Content}}
-                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if or (not .Page.Params.tocHidden) (eq .CurrentSection "contribute") }}d-none{{end}}">
-                                    <div class="left-offset hide"></div>
-                                    <a href="{{.Permalink}}" class="stretched-link child-link">
-                                        Overview
-                                    </a>
-                                </div>
-                            {{end}}
 
-                            {{ range .Pages }}
+                    {{ range .Pages }}
 
-                                {{ if .Pages }}
-                                    <!-- Show Section Title and its Subpages -->
-                                    {{/*  Generate a random subpage ID to use as the collapse target ID  */}}
-                                    {{ $subid := substr (sha1 .Permalink) 0 8 }}
-                                    {{ $subexpand := (or (eq $currentPage .) (eq $currentPage.Parent .)) }}
-                                    {{ $noContent := not .Content }}
-                                    {{ $hasContent := not $noContent }}
+                    {{ if .Pages }}
+                        <!-- Show Section Title and its Subpages -->
+                        {{/*  Generate a random subpage ID to use as the collapse target ID  */}}
+                        {{ $subid := substr (sha1 .Permalink) 0 8 }}
+                        {{ $subexpand := (or (eq $currentPage .) (eq $currentPage.Parent .)) }}
+                        {{ $noContent := not .Content }}
+                        {{ $hasContent := not $noContent }}
 
-                                    <!-- Parent Menu Button -->
-                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed');">
-                                        <div class="button-container left-offset z-3 {{if not .Pages}}hide{{end}}"> <!-- Increase z-index to put the button over the stretched-link -->
-                                            <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" ></div>
-                                        </div>
-                                        <span class="subheader-title">{{.Title }}</span>
-                                        <!-- <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link child-link">
-                                            {{.Title }} - hasContent: {{$hasContent}}
-                                        </a> -->
+                        <!-- Parent Menu Button -->
+                        <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed');">
+                            <div class="button-container left-offset z-3 {{if not .Pages}}hide{{end}}"> <!-- Increase z-index to put the button over the stretched-link -->
+                                <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" ></div>
+                            </div>
+                            <span class="subheader-title">{{.Title }}</span>
+                            <!-- <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link child-link">
+                                {{.Title }} - hasContent: {{$hasContent}}
+                            </a> -->
+                        </div>
+
+                        <div id="{{.Title}}-children" class="{{ if .Page.Params.tocHidden }}d-none{{end}}">
+                            <div class="subpages collapse list-group {{if $subexpand}} show {{end}}" id="collapse-{{$subid}}">
+                                {{if .Content}}
+                                    <div class="list-group-item list-group-item-action nav-child child-link-container subheader-overview d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                        <div class="left-offset hide"></div>
+                                        <a href="{{.Permalink}}" class="stretched-link child-link">
+                                            Overview
+                                        </a>
                                     </div>
-
-                                    <div id="{{.Title}}-children" class="{{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                        <div class="subpages collapse list-group {{if $subexpand}} show {{end}}" id="collapse-{{$subid}}">
-                                            {{if .Content}}
-                                                <div class="list-group-item list-group-item-action nav-child child-link-container subheader-overview d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                                    <div class="left-offset hide"></div>
-                                                    <a href="{{.Permalink}}" class="stretched-link child-link">
-                                                        Overview
-                                                    </a>
-                                                </div>
-                                            {{end}}
-                                            {{ range .Pages }}
-                                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                                    <div class="left-offset hide"></div>
-                                                    <a href="{{.Permalink}}" class="stretched-link child-link">
-                                                        {{ .Title }}
-                                                    </a>
-                                                </div>
-                                            {{ end }}
-                                        </div>
-                                    </div>
-
-                                {{ else }}
-                                    <!-- Show Section Title only -->
+                                {{end}}
+                                {{ range .Pages }}
                                     <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
                                         <div class="left-offset hide"></div>
                                         <a href="{{.Permalink}}" class="stretched-link child-link">
@@ -88,13 +70,25 @@
                                         </a>
                                     </div>
                                 {{ end }}
-                                
-                            {{ end }}
+                            </div>
                         </div>
-                    </div>
 
-            {{ end }}
+                    {{ else }}
+                        <!-- Show Section Title only -->
+                        <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                            <div class="left-offset hide"></div>
+                            <a href="{{.Permalink}}" class="stretched-link child-link">
+                                {{ .Title }}
+                            </a>
+                        </div>
+                    {{ end }}
+                    
+                {{ end }}
+            </div>
         </div>
+        {{ end }}
+    </div>
 
+        
     </nav>
 </div>
