--- a/themes/upbound/assets/scss/_content-body.scss
+++ b/themes/upbound/assets/scss/_content-body.scss
@@ -11,7 +11,6 @@
   @include media-breakpoint-down(xl) {
     padding: 50px;
     overflow-wrap: break-word;
-
   }
 
   // Override Bootstrap accordion colors in the body
@@ -27,9 +26,10 @@
   .accordion-body {
     border-top: 2px solid #{$up-grey-300};
     .highlight {
-      margin:0px;
+      margin: 0px;
     }
   }
+
   // Override Bootstrap accordion general properties
   .accordion-header {
     margin-top: 0px;
@@ -92,14 +92,12 @@
     padding-bottom: 8px;
   }
 
-
   h1, h2, h3, h4, h5, h6 {
-
     a {
       text-decoration: none !important;
       color: inherit !important;
 
-      &:hover{
+      &:hover {
         text-decoration: none !important;
       }
     }
@@ -136,8 +134,7 @@
   }
 
   // Override Bootstrap Tab styles
-  .nav-tabs{
-
+  .nav-tabs {
     border-bottom: none;
     font-weight: bold;
 
@@ -146,13 +143,10 @@
         display: block !important;
         margin: 0px;
       }
-
-
-
     }
     // Create a border for the non-tabbed space.
     // Prevents a double border for tabs/hover
-    &:not(.nav-link){
+    &:not(.nav-link) {
       border-bottom: 2px solid #{$gray-300};
       margin-bottom: 12px !important;
     }
@@ -175,10 +169,109 @@
       }
 
       // Make the text dark and override bootstrap hover behaviors.
-      &:hover{
+      &:hover {
         color: var(--body-font-color);
         border-color: #{$gray-300};
         border-bottom-width: 0;
+      }
+    }
+  }
+
+  // Content Selector Styles
+  .content-selector {
+    margin: 20px 0;
+
+    .content-select-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-bottom: 15px;
+    }
+
+    .content-select-button {
+      padding: 6px 12px;
+      font-size: $up-code-font-size;
+      font-weight: $body-font-weight;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+      background-color: var(--body-background);
+      color: var(--body-font-color);
+      border: 1px solid var(--border-bottom);
+
+      &:hover {
+        background-color: var(--nav-item-click-bg);
+      }
+
+      &.active {
+        color: var(--nav-item-active);
+        border-color: var(--nav-item-active);
+        background-color: var(--nav-item-active-bg);
+      }
+    }
+
+    .content-block {
+      border-radius: 0.375rem;
+      padding: 20px;
+      background-color: var(--body-background);
+      color: var(--body-font-color);
+
+      pre {
+        margin: 0;
+        padding: 15px;
+        border-radius: 0.25rem;
+        overflow-x: auto;
+        background-color: var(--code-block-background-color);
+      }
+
+      code {
+        font-family: $font-family-monospace;
+        font-size: $up-code-font-size;
+        line-height: $up-code-line-height;
+        color: var(--code-color);
+      }
+
+      .highlight {
+        margin: 0;
+        
+        pre {
+          padding: 15px;
+          background-color: var(--code-block-background-color);
+        }
+      }
+
+      .warning, .hint {
+        padding: 15px;
+        border-radius: 0.25rem;
+        margin-bottom: 15px;
+        border-width: 1px;
+        border-style: solid;
+      }
+
+      .warning {
+        background-color: var(--hint-warning-background);
+        color: var(--hint-warning);
+        border-color: var(--hint-warning);
+      }
+
+      .hint {
+        background-color: var(--hint-tip-background);
+        color: var(--hint-tip);
+        border-color: var(--hint-tip);
+      }
+
+      p {
+        margin-bottom: 15px;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: 15px;
+      }
+
+      ul, ol {
+        margin-bottom: 15px;
+        padding-left: 30px;
       }
     }
   }
