--- a/themes/upbound/assets/scss/_content-body.scss
+++ b/themes/upbound/assets/scss/_content-body.scss
@@ -26,10 +26,12 @@
   // Improve spacing and top-border on open Bootstrap accordions
   .accordion-body {
     border-top: 2px solid #{$up-grey-300};
+
     .highlight {
-      margin:0px;
+      margin: 0px;
     }
   }
+
   // Override Bootstrap accordion general properties
   .accordion-header {
     margin-top: 0px;
@@ -39,12 +41,15 @@
   .accordion-button {
     font-weight: 900;
   }
+
   .accordion-item {
     border-width: 2px;
   }
+
   .accordion-button:hover {
     outline: 2px solid #{$up-grey-600};
   }
+
   .accordion-button:not(.collapsed) {
     color: #{$font-color-dark};
   }
@@ -61,6 +66,7 @@
     border-collapse: separate;
     border-spacing: 0px;
   }
+
   // Hide bottom borders and wider padding for header items
   .table th {
     border-bottom: none;
@@ -69,6 +75,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
   }
+
   // Add only top borders and wider padding for content items
   .table td {
     border-top: 1px solid #{$up-grey-600};
@@ -78,6 +85,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
   }
+
   // Decrease padding for small tables
   .table.table-sm th {
     padding-left: 16px;
@@ -85,6 +93,7 @@
     padding-top: 8px;
     padding-bottom: 8px;
   }
+
   .table.table-sm td {
     padding-left: 16px;
     padding-right: 16px;
@@ -99,16 +108,18 @@
       text-decoration: none !important;
       color: inherit !important;
 
-      &:hover{
+      &:hover {
         text-decoration: none !important;
       }
     }
   }
+
   // Individual inline code snippets
   code {
     background-color: var(--code-background);
     color: var(--code-color);
     padding: 0.2em 0.4em;
+    border-radius: 4px;
   }
 
   a {
@@ -136,7 +147,7 @@
   }
 
   // Override Bootstrap Tab styles
-  .nav-tabs{
+  .nav-tabs {
 
     border-bottom: none;
     font-weight: bold;
@@ -148,12 +159,12 @@
       }
 
 
-
     }
     // Create a border for the non-tabbed space.
     // Prevents a double border for tabs/hover
-    &:not(.nav-link){
+    &:not(.nav-link) {
       border-bottom: 2px solid #{$gray-300};
+      margin-top: 24px !important;
       margin-bottom: 12px !important;
     }
 
@@ -175,11 +186,15 @@
       }
 
       // Make the text dark and override bootstrap hover behaviors.
-      &:hover{
+      &:hover {
         color: var(--body-font-color);
         border-color: #{$gray-300};
         border-bottom-width: 0;
       }
     }
+  }
+
+  .tab-pane > h3 {
+    margin-top: .5rem;
   }
 }
