--- a/themes/upbound/layouts/partials/body/darkmode.html
+++ b/themes/upbound/layouts/partials/body/darkmode.html
@@ -1,13 +1,11 @@
-<li class="nav-item col-xs p-2">
-  <div class="form-check form-switch color-switcher" >
-    <input class="d-flex form-check-input" type="checkbox" id="darkSwitch" />
-    <label class="d-flex navbar-link form-check-label" for="darkSwitch">Dark Mode</label>
-  </div>
-</li>
+<div class="nav-item">
+    <div class="form-check form-switch colormode">
+        <input class="form-check-input" type="checkbox" id="darkSwitch">
+        <label class="form-check-label" for="darkSwitch">Dark Mode</label>
+    </div>
+</div>
 <script>
-
-  if(document.documentElement.getAttribute("color-theme") === "dark"){
-    document.getElementById("darkSwitch").checked = true;
-  }
-
+    if(document.documentElement.getAttribute("color-theme") === "dark"){
+        document.getElementById("darkSwitch").checked = true;
+    }
 </script>
