--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -1,14 +1,13 @@
 // Styling related to the top navigation
-
 @mixin content-hierarchy {
     border: 1px solid #CDCDD3;
     background-color: var(--background-color);
     margin: -65px auto 0;
     max-width: 430px;
-    position:relative;
+    position: relative;
     z-index: 1;
     max-height: 500px;
-    overflow:scroll;
+    overflow: scroll;
     border-radius: 8px;
     box-shadow: 0 4px 4px 0 rgba(3, 7, 36, .12);
 }
@@ -50,7 +49,7 @@
             margin-top: 10px;
         }
 
-        .form-check-input{
+        .form-check-input {
             padding: 10px 4px 0 4px;
             vertical-align: top;
             margin-top: 10px;
@@ -58,7 +57,7 @@
             right: 0;
         }
 
-        .form-check-label{
+        .form-check-label {
             display: none !important;
         }
     }
@@ -72,16 +71,10 @@
         left: 0;
         padding: 16px 40px;
 
-
-
-
         a {
             text-decoration: none;
         }
-
-
     }
-
 
     .search-panel {
         pointer-events: none;
@@ -142,10 +135,7 @@
         .search-results {
             @include content-hierarchy;
             padding: 70px 10px 10px;
-
         }
-
-
 
         .no-results-container {
             @include content-hierarchy;
@@ -169,44 +159,39 @@
 
     .nav-item {
         margin: 0;
-        position:absolute;
+        position: absolute;
         right: 0;
         top: 0;
         margin-top: 10px;
         margin-right: 16px;
         list-style-type: none;
 
-
         @include media-breakpoint-down(lg) {
             margin-top: 0;
             margin-right: 0;
-
         }
 
-    }
+        &.top-nav-item {
+            .form-check.form-switch.colormode {
+                display: flex;
+                align-items: center;
 
-    .form-check.form-switch.colormode {
-        display: flex;
-        align-items: center;
+                @include media-breakpoint-down(xl) {
+                    margin-top: 0;
+                    margin-right: 0;
+                }
 
+                .form-check-input {
+                    margin-right: 8px;
+                    align-items: center;
 
-        @include media-breakpoint-down(xl) {
-            margin-top: 0;
-            margin-right: 0;
-
+                    &:checked {
+                        background-color: var(--background-color);
+                        border-color: #{$up-purple-300};
+                        margin-right: 8px;
+                    }
+                }
+            }
         }
     }
-
-    .form-check-input {
-        margin-right: 8px;
-        align-items: center;
-    }
-
-    .form-check-input:checked {
-        background-color: var(--background-color);
-        border-color: #{$up-purple-300};
-        margin-right: 8px;
-
-    }
-
 }
