--- a/themes/upbound/layouts/partials/body/darkmode.html
+++ b/themes/upbound/layouts/partials/body/darkmode.html
@@ -1,5 +1,5 @@
-<div class="nav-item">
-    <div class="form-check form-switch colormode">
+<div class="nav-item top-nav-item">
+    <div class="form-check form-switch colormode top-nav-switch">
         <input class="form-check-input" type="checkbox" id="darkSwitch">
         <label class="form-check-label" for="darkSwitch">Dark Mode</label>
     </div>
