--- a/themes/upbound/layouts/partials/head/stylesheets/stylesheet.html
+++ b/themes/upbound/layouts/partials/head/stylesheets/stylesheet.html
@@ -1,8 +1,7 @@
 {{ $style := false }}
 {{ $sassOptions := (dict "outputStyle" "expanded" "precision" 6 "enableSourceMap" true ) }}
-
 {{ if eq hugo.Environment "production" -}}
-  {{ $style = resources.Get "scss/main.scss" | toCSS $sassOptions | resources.PostCSS | fingerprint | resources.PostProcess }}
+  {{ $style = resources.Get "scss/main.scss" | toCSS $sassOptions | css.PostCSS | fingerprint | resources.PostProcess }}
 {{ else }}
   {{ $style = resources.Get "scss/main.scss" | toCSS $sassOptions | fingerprint  }}
 {{ end }}
