--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -40,7 +40,7 @@
    </div>
 
    <div class="title">
-       <h2>Resources</h2>
+       <h2>Guides and Resources</h2>
    </div>
 
    <div class="three-wide-grid">
